syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/api/annotations.proto";

package api.gateway.manager.service;

option go_package = "api";
option (gogoproto.goproto_getters_all) = false;

service Manager {
  //批量接口信息
  rpc ApiDetailList(ApiDetailListReq) returns (ApiDetailListResp);
}

message ApiDetailListReq {
  //类型 0-grpc 1-http
  int32 tp = 1;
  //discovery列表或者url列表
  repeated string name = 2 [(gogoproto.moretags) = 'validate:"required"'];
}

message ApiDetailListResp {
  //key:name value:接口详情
  map<string, ApiInfo> res = 1;
}

message ApiInfo {
  repeated string service_name = 1;
  string pb_alias = 2;
  string pb_path = 3;
  string input = 4;
  string output = 5;
}
